# Memora

./: .env.example  README.md  TC_with_CNN.pptx  main.py  pyproject.toml
assets/.comments/: memora_banner.png.xml
src/memora/: cli.py  config.py  ingest.py  lazy_store.py  rag.py  retriever.py  store.py  tui.py
